Round 1 feedback changes from QA

--- a/apps/bcc3d.ca/pages/contact.html
+++ b/apps/bcc3d.ca/pages/contact.html
@@ -20,14 +20,14 @@ permalink: /contact/
 
             <h5>Media Inquiries</h5>
             <ul class="contact-list">
-                <li><i class="fad fa-envelope fa-fw"></i> <a href="mailto:trent.shumay@bcc3d.ca">Trent Shumay</a> (trent@shumay@bcc3d.ca)</a></li>
+                <li><i class="fad fa-envelope fa-fw"></i> <a href="mailto:trent.shumay@bcc3d.ca">Trent Shumay</a> (trent.shumay@bcc3d.ca)</a></li>
             </ul>
 
 
             <h5>Other Links</h5>
 
             <ul class="contact-list">
-                <li><a href="https://www.gofundme.com/f/w32hr-3d-printed-face-shields-for-frontline-covid"><i class="fad fa-donate fa-fw"></i> LNG Studios Gofundme</a></li>
+                <li><a href="#" ><i class="fad fa-donate fa-fw"></i> Our Gofundme</a> (coming soon)</li>
             </ul>
 
 
