--- a/apps/bcc3d.ca/pages/products/face-shields.html
+++ b/apps/bcc3d.ca/pages/products/face-shields.html
@@ -30,7 +30,7 @@ permalink: /products/face-shields/
 
             <ul class="list-group mb-4">
                 <li class="list-group-item"><a href="https://github.com/bccovid-19/printfiles"><i class="fab fa-github fa-fw"></i> GitHub Repository</a></li>
-                <li class="list-group-item"><a href="https://www.gofundme.com/f/w32hr-3d-printed-face-shields-for-frontline-covid"><i class="fad fa-donate fa-fw"></i> LNG Studios Gofundme</a></li>
+                <li class="list-group-item"><i class="fad fa-donate fa-fw"></i> <b>Our Gofundme</b> (coming soon)</li>
             </ul>
 
             <div class="mb-3">
@@ -73,9 +73,10 @@ permalink: /products/face-shields/
 
     </div>
     <div class="image-grid d-flex mb-3">
-        <img class="img-fluid" src="/assets/img/products/face-shield-5.jpg">
-        <img class="img-fluid" src="/assets/img/products/face-shield-4.jpg">
-        <img class="img-fluid" src="/assets/img/products/face-shield-3.jpg">
+        <img class="img-fluid flex-fill" src="/assets/img/products/face-shield-5.jpg">
+        <img class="img-fluid flex-fill" src="/assets/img/products/face-shield-1.jpg">
+        <img class="img-fluid flex-fill" src="/assets/img/products/face-shield-4.jpg">
+        <img class="img-fluid flex-fill" src="/assets/img/products/face-shield-3.jpg">
     </div>
 
 </div>
