--- a/apps/bcc3d.ca/pages/volunteers.html
+++ b/apps/bcc3d.ca/pages/volunteers.html
@@ -26,7 +26,7 @@ permalink: /volunteers/
             <ul class="list-group mb-4">
                 <li class="list-group-item"><a href="https://sites.google.com/view/gvrd-face-shield-printers/home/headset-printers"><i class="fad fa-book fa-fw"></i> Sign up as a Producer</a></li>
                 <li class="list-group-item"><a href="https://github.com/bccovid-19/printfiles/archive/master.zip"><i class="fad fa-file-archive fa-fw"></i> Download .STL 3D Files</a></li>
-                <li class="list-group-item"><a href="https://sites.google.com/view/gvrd-face-shield-printers/home/total-supply-and-demand"><i class="fad fa-chart-line fa-fw"></i> Check Product Supply and Demand </a></li>
+                {% comment %} <li class="list-group-item"><a href="https://sites.google.com/view/gvrd-face-shield-printers/home/total-supply-and-demand"><i class="fad fa-chart-line fa-fw"></i> Check Product Supply and Demand </a></li> {% endcomment %}
                 <li class="list-group-item"><a href="https://sites.google.com/view/gvrd-face-shield-printers/home/filament-supply"><i class="fad fa-chart-line fa-fw"></i> Check Filament Supply </a></li>
             </ul>
 
@@ -40,7 +40,7 @@ permalink: /volunteers/
 
             <ul class="list-group mb-4">
                 <li class="list-group-item"><a href="https://github.com/bccovid-19/printfiles"><i class="fab fa-github fa-fw"></i> GitHub Repository</a></li>
-                <li class="list-group-item"><a href="https://www.gofundme.com/f/w32hr-3d-printed-face-shields-for-frontline-covid"><i class="fad fa-donate fa-fw"></i> LNG Studios Gofundme</a></li>
+                <li class="list-group-item"><i class="fad fa-donate fa-fw"></i> <b>Our Gofundme</b> (coming soon)</li>
             </ul>
 
 
