Thank you config

--- a/apps/bcc3d.ca/pages/request-thank-you.html
+++ b/apps/bcc3d.ca/pages/request-thank-you.html
@@ -5,9 +5,9 @@ layout: default
 permalink: /request/thank-you
 ---
 
-<div class="container">
 
-<div class="hero jumbotron jumbotron-fluid mt-n3">
+
+<div class="hero jumbotron jumbotron-fluid my-n3">
   <div class="container">
     <h1 class="display-5">Thank you for your submission!</h1>
     <p class="lead">
