--- a/apps/bcc3d.ca/pages/request-thank-you.html
+++ b/apps/bcc3d.ca/pages/request-thank-you.html
@@ -2,10 +2,8 @@
 title: Thank You — BC Covid-19 3D Printing Group
 description: We're printing crowd-sourced PPE for British Columbia's healthcare providers and first responders.
 layout: default
-permalink: /request/thank-you
+permalink: /request/thank-you/
 ---
-
-
 
 <div class="hero jumbotron jumbotron-fluid my-n3">
   <div class="container">
