--- a/apps/bcc3d.ca/pages/request.html
+++ b/apps/bcc3d.ca/pages/request.html
@@ -40,25 +40,25 @@ facilityOptions:
         <div class="form-group">
           <label for="facilityName">Facility Name</label>
           <input name="facilityName" id="facilityName" type="text" class="form-control" required>
-          {% comment %} <small id="facilityNameHelp" class="form-text text-muted">...</small> {% endcomment %}
+          <small id="facilityNameHelp" class="form-text text-muted">Name of facility and/or department</small>
         </div>
 
         <div class="form-group">
           <label for="facilityAddress">Facility Address</label>
           <input name="facilityAddress" id="facilityAdress" type="text" class="form-control" required>
-          {% comment %} <small id="facilityAdressHelp" class="form-text text-muted">...</small> {% endcomment %}
+          <small id="facilityAdressHelp" class="form-text text-muted">Facility address including city and postal code.</small>
         </div>
 
         <div class="form-group">
           <label for="contactName">Contact Name</label>
           <input name="contactName" id="contactName" type="text" class="form-control" required>
-          {% comment %} <small id="contactNameHelp" class="form-text text-muted">...</small> {% endcomment %}
+          <small id="contactNameHelp" class="form-text text-muted">Name of the person who will coordinate the delivery.</small>
         </div>
 
         <div class="form-group">
-          <label for="contactPhone">Contact Phone</label>
+          <label for="contactPhone">Contact Mobile</label>
           <input name="contactPhone" id="contactPhone" type="text" class="form-control" required>
-          {% comment %} <small id="contactPhoneHelp" class="form-text text-muted">...</small> {% endcomment %}
+          <small id="contactPhoneHelp" class="form-text text-muted">We will contact you via text to confirm your request.</small>
         </div>
 
 
@@ -75,7 +75,7 @@ facilityOptions:
             <div class="col form-group">
             <label for="requestVisors">Face Shield Visors</label>
             <input name="requestVisors" id="requestVisors" type="number" class="form-control" value="0" min="0" required>
-            {% comment %} <small id="requestVisorsHelp" class="form-text text-muted">...</small> {% endcomment %}
+            <small id="requestVisorsHelp" class="form-text text-muted">Please limit to 2 per frame.</small>
             </div>
 
             <div class="col form-group">
