--- a/apps/bcc3d.ca/pages/request.html
+++ b/apps/bcc3d.ca/pages/request.html
@@ -45,8 +45,8 @@ facilityOptions:
 
         <div class="form-group">
           <label for="facilityAddress">Facility Address</label>
-          <input name="facilityAddress" id="facilityAdress" type="text" class="form-control" required>
-          <small id="facilityAdressHelp" class="form-text text-muted">Facility address including city and postal code.</small>
+          <input name="facilityAddress" id="facilityAddress" type="text" class="form-control" required>
+          <small id="facilityAddressHelp" class="form-text text-muted">Facility address including city and postal code.</small>
         </div>
 
         <div class="form-group">
@@ -58,7 +58,7 @@ facilityOptions:
         <div class="form-group">
           <label for="contactPhone">Contact Mobile</label>
           <input name="contactPhone" id="contactPhone" type="text" class="form-control" required>
-          <small id="contactPhoneHelp" class="form-text text-muted">We will contact you via text to confirm your request.</small>
+          <small id="contactPhoneHelp" class="form-text text-muted">We will contact you to confirm your request.</small>
         </div>
 
 
