--- a/apps/bcc3d.ca/pages/request.html
+++ b/apps/bcc3d.ca/pages/request.html
@@ -46,19 +46,19 @@ facilityOptions:
         <div class="form-group">
           <label for="facilityAddress">Facility Address</label>
           <input name="facilityAddress" id="facilityAddress" type="text" class="form-control" required>
-          <small id="facilityAddressHelp" class="form-text text-muted">Facility address including city and postal code.</small>
+          <small id="facilityAddressHelp" class="form-text text-muted">Facility address including city and postal code</small>
         </div>
 
         <div class="form-group">
           <label for="contactName">Contact Name</label>
           <input name="contactName" id="contactName" type="text" class="form-control" required>
-          <small id="contactNameHelp" class="form-text text-muted">Name of the person who will coordinate the delivery.</small>
+          <small id="contactNameHelp" class="form-text text-muted">Name of the person who will coordinate the delivery</small>
         </div>
 
         <div class="form-group">
           <label for="contactPhone">Contact Mobile</label>
           <input name="contactPhone" id="contactPhone" type="text" class="form-control" required>
-          <small id="contactPhoneHelp" class="form-text text-muted">We will contact you to confirm your request.</small>
+          <small id="contactPhoneHelp" class="form-text text-muted">We will contact you to confirm your request</small>
         </div>
 
 
@@ -75,7 +75,7 @@ facilityOptions:
             <div class="col form-group">
             <label for="requestVisors">Face Shield Visors</label>
             <input name="requestVisors" id="requestVisors" type="number" class="form-control" value="0" min="0" required>
-            <small id="requestVisorsHelp" class="form-text text-muted">Please limit to 2 per frame.</small>
+            <small id="requestVisorsHelp" class="form-text text-muted">Please limit to 2 per frame</small>
             </div>
 
             <div class="col form-group">
