Hotfix 1.0.1 fixes a multiple submission bug

--- a/apps/bcc3d.ca/pages/request.html
+++ b/apps/bcc3d.ca/pages/request.html
@@ -134,7 +134,7 @@ facilityOptions:
         </div>
 
         <p>
-            <button class="btn btn-primary btn-lg">Submit Request</button>
+            <button id="submitButton" class="btn btn-primary btn-lg">Submit Request</button>
         </p>
 
     </form>
