Hotfix getting started guide

--- a/apps/bcc3d.ca/pages/getting-started.html
+++ b/apps/bcc3d.ca/pages/getting-started.html
@@ -50,10 +50,6 @@ permalink: /volunteers/getting-started/
             First you should sign up as a supplier using <a href="https://sites.google.com/view/gvrd-face-shield-printers/home/headset-printers">this form</a>.
         </p>
 
-        <p>
-            Check the demand for the items <a href="https://sites.google.com/view/gvrd-face-shield-printers/home/total-supply-and-demand">here</a>.
-        </p>
-
         <p>Download the .stl files in the BC Covid-19 repository on <a href="https://github.com/bccovid-19/printfiles">Github</a>. Those are the files being used by our community.
         If you are a developer, join the #website channel on Slack.</p>
 
@@ -114,7 +110,9 @@ permalink: /volunteers/getting-started/
         </h5>
 
         <p>
-            Delivery is likely to be handled by a local company, as will most pick-ups (more details expected by April 1st, 2020). We'll ask that each producer withhold the items they've printed for collection when there's a decent amount available, rather than a few at a time.
+            Please keep your <a href="https://sites.google.com/view/gvrd-face-shield-printers/home/headset-printers
+            ">inventory updated</a>. You will be contacted for pickup or delivery when we match you with a courier or requesting health care provider.
+            Please continue to print, we are more likely to match you if you have more inventory.
         </p>
 
         <h5 id="j">
@@ -122,7 +120,8 @@ permalink: /volunteers/getting-started/
         </h5>
 
         <p>
-            Currently the team is working to fulfill requests from local hospitals and nursing homes.
+            Currently the team is working to fulfill requests from staff at local hospitals, medical facilities, nursing homes, as well as other organizations working on the front line.
+
         </p>
 
         <h5 id="k">
@@ -130,7 +129,8 @@ permalink: /volunteers/getting-started/
         </h5>
 
         <p>
-            It's difficult for us to identify the sanitizing needs of the recipients. On top of that we don't have any approved method of sterilization. For this reason we cannot ensure that the items are sterile.
+            Sanitization should be performed by the health care professional to the standard they require. We should ensure that our prints are clean and free from visible debris. Do not attempt to sterilize your prints using alcohol or other sterilizing agents.
+
         </p>
 
         <h5 id="l">
@@ -138,16 +138,8 @@ permalink: /volunteers/getting-started/
         </h5>
 
         <p>
-            As mentioned by Gavin Dunne on our #filament-requests channel on Slack:
+            With a generous donation from MG Chemical, we now have a supply of filament to share with our members. Please only request what you need, based on your production capacity for the next week. You can find out how to make a request on our slack.
         </p>
-
-        <blockquote>
-            "With a generous donation from MG Chemical, we now have a supply of filament to share with our members. Please only pick up what you need, based on your production capacity for the next week! Remember to update your filament needs and other production figures after picking up. Please contact @Liam Shirley (on slack) or at 778-918-5042 to arrange pickup from the following address:
-            <br><br>
-            Caravan Stage Company<br>
-            284 SW Marine Dr,<br>
-            Vancouver, BC V5X 2R5<br>
-        </blockquote>
 
         <h5 id="m">
             I can only print mask straps (a.k.a. Ear savers) but based on the numbers it looks like we have the production of those covered. Should I print it anyway?
