Fix typo in comment

--- a/apps/bcc3d.ca/pages/request.html
+++ b/apps/bcc3d.ca/pages/request.html
@@ -68,7 +68,7 @@ facilityOptions:
         <div>
           <select id="facilityRegion"> </select>
         </div>
-        <!-- region radio options rendered from request.html -->
+        <!-- region radio options rendered from request.js -->
       </div>
 
       <div class="form-group">
