Remove and rotate api key

--- a/apps/bcc3d.ca/pages/request.html
+++ b/apps/bcc3d.ca/pages/request.html
@@ -264,8 +264,9 @@ facilityOptions:
       </p>
     </form>
   </div>
+  <!-- replace API_KEY with Google Places API Key -->
   <script
-    src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBTTwbMQP_k_4P0JOY4SvtKJEF4JOjVsKM&libraries=places"
+    src="https://maps.googleapis.com/maps/api/js?key=API_KEY&libraries=places"
     async
     defer
   ></script>
