Update home page face shield img and updated join slack link

--- a/apps/bcc3d.ca/pages/getting-started.html
+++ b/apps/bcc3d.ca/pages/getting-started.html
@@ -39,7 +39,7 @@ permalink: /volunteers/getting-started/
         <h5 id="a">Who's organizing all this?</h5>
 
         <p>
-            Currently we are getting organized using the <a href="https://join.colors3d.com">BC Covid-19 3D Printing Slack channel</a>. There you can find the latest information on our efforts.
+            Currently we are getting organized using the <a href="https://join.bcc3d.ca">BC Covid-19 3D Printing Slack channel</a>. There you can find the latest information on our efforts.
         </p>
 
         <h5 id="b">
