--- a/apps/bcc3d.ca/pages/volunteers.html
+++ b/apps/bcc3d.ca/pages/volunteers.html
@@ -16,7 +16,7 @@ permalink: /volunteers/
             <h5>All Volunteers</h5>
 
             <ul class="list-group mb-4">
-                <li class="list-group-item"><a href="https://join.colors3d.com"><i class="fab fa-slack fa-fw"></i> First, join the Slack Team</a></li>
+                <li class="list-group-item"><a href="https://join.bcc3d.ca"><i class="fab fa-slack fa-fw"></i> First, join the Slack Team</a></li>
                 <li class="list-group-item"><a href="/volunteers/getting-started/"><i class="fad fa-book fa-fw"></i> Read the Getting Stated Guide</a></li>
                 <li class="list-group-item"><a href="https://docs.google.com/document/d/1M-zEC_Vq1Ga9mfthnh5VXj-GuqzpFC1o6yk9S2x2csA/edit#heading=h.nd5i9a6xyut8"><i class="fad fa-book fa-fw"></i> Read the Safe Handoff Protocol </a></li>
             </ul>
