Update GoFundMe Link

--- a/apps/bcc3d.ca/pages/products/face-shields.html
+++ b/apps/bcc3d.ca/pages/products/face-shields.html
@@ -29,7 +29,7 @@ permalink: /products/face-shields/
 
             <ul class="list-group mb-4">
                 <li class="list-group-item"><a href="https://github.com/bccovid-19/printfiles"><i class="fab fa-github fa-fw"></i> GitHub Repository</a></li>
-                <li class="list-group-item"><i class="fad fa-donate fa-fw"></i> <b>Our Gofundme</b> (coming soon)</li>
+                <li class="list-group-item"><a href="https://www.gofundme.com/f/3d-printed-face-shields-and-ear-savers"><i class="fad fa-donate fa-fw"></i> <b>Our GoFundMe</b></a></li>
             </ul>
 
             <div class="mb-3">
