--- a/apps/bcc3d.ca/pages/contact.html
+++ b/apps/bcc3d.ca/pages/contact.html
@@ -23,6 +23,11 @@ permalink: /contact/
                 <li><i class="fad fa-envelope fa-fw"></i> <a href="mailto:trent.shumay@bcc3d.ca">Trent Shumay</a> (trent.shumay@bcc3d.ca)</a></li>
             </ul>
 
+            <h5>Donation Inquiries</h5>
+            <ul class="contact-list">
+                <li><i class="fad fa-envelope fa-fw"></i> <a href="mailto:donations@bcc3d.ca">Donations</a> (donations@bcc3d.ca)</a></li>
+                <p>We also accept e-transfer donations to this email address.</p>
+            </ul>
             <h5>Social Media</h5>
             <ul class="contact-list">
                 {% for social in site.data.socials %}
@@ -32,7 +37,7 @@ permalink: /contact/
 
             <h5>Other Links</h5>
             <ul class="contact-list">
-                <li><i class="fad fa-donate fa-fw"></i> <b>Our Gofundme</b> (coming soon)</li>
+                <li><a href="https://www.gofundme.com/f/3d-printed-face-shields-and-ear-savers"><i class="fad fa-donate fa-fw"></i> <b>Our GoFundMe</b></a></li>
             </ul>
 
         </div>
