Updated donations links and added donations.html content

--- a/apps/bcc3d.ca/pages/donations.html
+++ b/apps/bcc3d.ca/pages/donations.html
@@ -9,11 +9,81 @@ permalink: /donations/
   <h2>Donations</h2>
 
   <div class="row">
+    <div class="col-md-4 order-2">
+      <h5>Donation Links</h5>
+
+      <ul class="list-group mb-4">
+        <li class="list-group-item">
+          <a href="mailto:admin@bcc3d.ca"
+            ><i class="fad fa-envelope fa-fw"></i> Donate Supplies</a
+          >
+        </li>
+        <li class="list-group-item">
+          <a href="mailto:donations@bcc3d.ca"
+            ><i class="fad fa-donate fa-fw"></i> Donate Using E-transfer</a
+          >
+        </li>
+        <li class="list-group-item">
+          <a
+            href="https://www.gofundme.com/f/3d-printed-face-shields-and-ear-savers"
+            ><i class="fad fa-donate fa-fw"></i> Donate on GoFundMe</a
+          >
+        </li>
+      </ul>
+    </div>
     <div class="col-md-8">
       <p class="lead">
-        BC COVID-19 3D Printing Group runs solely by the generous contributions
-        from our donors and sponsors.
+        Thanks for your interest in supporting the BC COVID-19 3D Printing
+        Group. Your support is very important to us.
       </p>
+      <p>
+        Demand for our products is increasing daily as more health care
+        professionals become aware of our group and our products. We are rising
+        to the challenge, but we move faster with your support either via
+        materials or financial contributions.
+      </p>
+      <h5>
+        Materials
+      </h5>
+      <p>
+        We are in urgent need of clear plastics that we can form our face
+        shields from. If you are aware of a source for PET-G, Laminating Sheets,
+        Report Covers, Overhead Transparencies, or similar materials that might
+        be suitable, our logistics team would love to hear from you. Please
+        contact us directly with the supplier information.
+      </p>
+      <h5>
+        Finances
+      </h5>
+      <!-- dynamically load donors list from here -->
+      <!-- <p>
+        We would like thank our direct financial contributors to the project:
+      </p>
+      <ul>
+        <li>DONOR #1</li>
+        <li>DONOR #2</li>
+      </ul> -->
+      <p>
+        As we ramp into larger scale production, this financial support is key
+        as we are resource bound, particularly when it comes to purchasing raw
+        materials, and the cost of delivery of our products.
+      </p>
+      <p>
+        Every dollar counts, and we are grateful for any contribution you can
+        allocate to our project. All funds received go directly toward
+        production expenses.
+      </p>
+      <p>
+        If you would like to donate directly to our project, you can reach us at
+        <a href="mailto:donations@bcc3d.ca">donations@bcc3d.ca</a>. (Interac
+        e-transfers are also accepted via this email address). If you'd prefer
+        to support us via GoFundMe, you can find our page
+        <a
+          href="https://www.gofundme.com/f/3d-printed-face-shields-and-ear-savers"
+          >here</a
+        >.
+      </p>
+      <p><b>Thank you!</b></p>
     </div>
   </div>
 </div>
